spacing issues fixed

--- a/main/src/styles/About.css
+++ b/main/src/styles/About.css
@@ -3,3 +3,6 @@
     width: 100vw;
     background-color: #FFFCF2;
 }
+.video-link>h4{
+    padding-bottom: 3%;
+}
