--- a/main/src/styles/Home.css
+++ b/main/src/styles/Home.css
@@ -6,10 +6,10 @@
 .home-contents{
     height: 80vh;
     width: 40vw;
-    margin-top: 3%;
     margin-left: 30%;
 }
 .home-contents>img{
     height: 25h;
     width: 25vw;
+    padding-bottom: 10%;
 }
